samples/_failures_safe/1761637781_7f66db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4025ce2.c: In function ‘main’:
./samples/SAFE/__tmp_d4025ce2.c:152:21: error: expected expression at end of input
  152 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_d4025ce2.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4025ce2.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4025ce2.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4025ce2.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4025ce2.c:152:21: error: expected declaration or statement at end of input
